Fix some broken instructions and update the content max width

--- a/themes/my_theme/static/style.css
+++ b/themes/my_theme/static/style.css
@@ -191,11 +191,9 @@ p > .link {
   color: var(--default-color);
 }
 
-.article_body {
-  max-width: 1300px;
-}
-
-.content, .footer {
+.article_body ,
+.content,
+.footer {
   max-width: 950px;
 }
 
